# BlitzArch

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  LICENSE-commercial.txt  README.md  benchmark_results.csv  benchmark_results_prev.csv  build.rs  dhat-heap.json  fix.patch  test.katana  test_final.katana  test_fixed.katana  test_multi.katana  test_simple.katana  windows_app.manifest
.cargo/: config.toml
.github/: release-drafter.yml
.github/workflows/: ci.yml  cross-platform-ci.yml  release-drafter.yml  release-macos-universal.yml  release-multiplatform.yml  release.yml  windows-ci.yml
assets/: README.md
benches/: benchmark_results.csv  benchmark_results_20250716.csv  main_benchmark.rs  marketing_random_access.rs  memory_profile.rs  performance_comparison.rs  random_access_benchmark.rs  random_access_profiles.rs  real_data_benchmark.rs  seekable_full.rs  seekable_poc.rs
docs/: LICENSING.md  format_rfc.md  katana.md
gui/: README.md  index.html  package-lock.json  package.json  server.js
gui/TEMPLATE/tem1/src/api/: base44Client.js  entities.js
gui/TEMPLATE/tem1/src/components/archiver/: ArchiveBrowser.jsx  ArchiveExplorer.jsx  ArchiveViewer.jsx  ControlDashboard.jsx  ControlPanel.jsx  DropZone.jsx  MetricsPanel.jsx  PasswordField.jsx  PresetSelector.jsx  ProcessingInterface.jsx  ProcessingPanel.jsx  ResultModal.jsx  TaskProgress.jsx  TestPanel.jsx  WorkspaceDropZone.jsx
gui/TEMPLATE/tem1/src/pages/: BlitzArch.jsx  index.jsx
gui/src-tauri/: Cargo.toml  tauri.conf.json
gui/src-tauri/capabilities/: default.json
gui/src-tauri/dragout-plugin/: Cargo.toml  README.md  build.rs
gui/src-tauri/dragout-plugin/permissions/autogenerated/: reference.md
gui/src-tauri/dragout-plugin/src/: lib.rs  macos.rs  macos_objc2.rs
gui/src-tauri/icons/: icon.icns
gui/src-tauri/src/: commands.rs  lib.rs  lib.rs.backup  main.rs
gui/src/components/archiver/: ArchiveBrowser.jsx  ArchiveExplorer.jsx  ArchiveViewer.jsx  ControlDashboard.jsx  ControlPanel.jsx  DragDropZone.jsx  DropZone.jsx  MainWorkspace.jsx  MetricsPanel.jsx  PasswordField.jsx  PresetSelector.jsx  ProcessingInterface.jsx  ProcessingPanel.jsx  ResultModal.jsx  SpeedGauge.jsx  SpeedMeter.jsx  StatusBar.jsx  SystemStatus.jsx  TaskProgress.jsx  WorkspaceDropZone.jsx
gui/src/lib/: blitzarch-engine.js  path-utils.js  tauri-engine.js
gui/src/pages/: BlitzArch.jsx
installer/: blitzarch.wxs
scripts/: benchmark_all.sh
src/: autotune.rs  cli_runner.rs  crypto.rs  dict_cache.rs  error.rs  fsx.rs  katana.rs  katana_stream.rs  lib.rs  main.rs  memory_pool.rs  progress.rs  seekable.rs  zstd_block.rs
src/archive/: mod.rs  mod.rs.new  mod.rs.orig
src/cli/: mod.rs
src/common/: mod.rs
src/compliance/: mod.rs
src/compress/: mod.rs
src/daemon/: mod.rs
src/extract/: block_pipeline.rs  mod.rs  parallel.rs  writer_pool.rs
src/index/: mod.rs
src/workers/: mod.rs  sharded.rs
tests/: cli.rs  compression_modes_test.rs  encryption_integration_test.rs  katana_additional_tests.rs  katana_edge_tests.rs  katana_encryption_test.rs  katana_footer.rs  katana_integration_test.rs  katana_marketing_tests.rs  katana_random_access_test.rs  paranoid.rs  windows_filename_test.rs
