[package]
name = "blitzarch"
version = "0.1.0"
edition = "2021"
description = "A blazingly fast, parallel-first file archiver with a focus on high performance for modern hardware."
license = "GPL-3.0-only OR BlitzArch-Commercial"
repository = "https://github.com/wS-CS-1A-Group-2/blitzarch"
documentation = "https://docs.rs/blitzarch"
keywords = ["archive", "compression", "parallel", "zstd", "performance"]
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
# Enable platform-native optimizations (AVX2/NEON). Build with:
#   cargo build --release --features simd_optim
simd_optim = []

[dependencies]
term_size = "0.3"
sysinfo = "0.30"
argon2 = "0.5"
crc32fast = "1.3"
hmac = "0.12"
csv = "1.3.0"
regex = "1.10.4"
# Core compression
zstd = { version = "0.13.1", features = ["zstdmt", "experimental"] }
zstd-sys = { version = "2.0.15", features = ["legacy"] }
xz2 = "0.1"
tempfile = "3.10.1"
zip = { version = "0.6", features = ["zstd"] }
crossbeam-channel = "0.5.12"
num_cpus = "1.16.0"
walkdir = "2.5.0"
memmap2 = "0.7"
libc = "0.2"

rayon = "1.7"

# Async I/O and runtime
tokio = { version = "1", features = ["full"] }

# Command-line interface
clap = { version = "4.5.4", features = ["derive"] }

# Serialization / Deserialization
rpassword = "7.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Cryptography and Hashing

aes-gcm = "0.10"
# Added missing crates after dependency regression
aes-gcm-stream = "0.2"
rand = "0.8"
pbkdf2 = "0.12"
sha2 = "0.10"
blake3 = "1.5"
chrono = { version = "0.4", features = ["serde"] }
jwalk = "0.6"
scopeguard = "1.2"











[build-dependencies]
winres = "0.1"

[dev-dependencies]
criterion = { version = "0.5", features = ["async_tokio"] }
tempfile = "3.10.1"
tar = "0.4"
csv = "1.3"
serde = { version = "1.0", features = ["derive"] }

assert_cmd = "2.0"
predicates = "2.1"
dhat = "0.3"











[[bench]]
name = "performance_comparison"
harness = false

[[bench]]
name = "real_data_benchmark"
harness = false

[[bench]]
name = "random_access_profiles"
harness = false

[[bench]]
name = "marketing_random_access"
path = "benches/marketing_random_access.rs"
harness = false

[workspace]
members = [
    "gui/src-tauri",
    "gui/src-tauri/dragout-plugin",
]
